package com.ucms.assessments;

public class Assessment {
}
